fix: margin and responsive visibility

--- a/base.css
+++ b/base.css
@@ -135,9 +135,19 @@ html.framed .container {
   display: none;
 }
 
+.display-sm {
+  display: none;
+}
+
 @media only screen and (min-width: 540px) {
   .container {
     width: 80%;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .display-sm {
+    display: block !important;
   }
 }
 
